--- a/index.html
+++ b/index.html
@@ -3,22 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Brawlstars</title>
+  <title>Café Caboclo</title>
   <link rel="stylesheet" href="assets/main.css">
   <script async defer src="assets/main.js"></script>
 </head>
 <body>
   <header>
-    <h1>Brawlstars</h1>
+    HEADER
   </header>
-  <nav class="closed">
-    menu
+  <nav>
+    <button class="toggle-nav">Toggle Nav</button>
+    NAV
   </nav>
   <main>
-    main
+    MAIN
+    <button class="toggle-nav">Toggle Nav</button>
   </main>
   <footer>
-    footer
+    <button class="toggle-nav">Toggle Nav</button>
+    FOOTER
   </footer>
 </body>
 </html>
