--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
   <link rel="stylesheet" href="assets/main.css">
   <script async defer src="assets/main.js"></script>
 </head>
+
 <body>
   <header>
     HEADER
@@ -16,12 +18,19 @@
     NAV
   </nav>
   <main>
-    MAIN
-    <button class="toggle-nav">Toggle Nav</button>
+    <div class="personagens">
+      <template id="modelo-personagem">
+        <div class="personagem">
+          <h2>Personagem</h2>
+          <p>hostilidade</p>
+        </div>
+      </template>
+    </div>
   </main>
   <footer>
     <button class="toggle-nav">Toggle Nav</button>
     FOOTER
   </footer>
 </body>
+
 </html>
